# FedAvg

./: .env.example  .gitignore  README.md  client.py  compare_runs.py  dashboard_api.py  hospital_A_data.npz  hospital_B_data.npz  inspect_update_audit.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
dashboard-ui/: index.html  package-lock.json  package.json
dashboard-ui/src/: App.jsx  styles.css
